examples/fail/application_with_non_function.uplp
category = "error"

[metadata]
error = "Type.mismatch"

[metadata.expectation]
t1 = "Num"
t2 = "Num -> ?0"
---
let a = 1 in a 5